--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CodeAgent X - Gemini 3 Engineer</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         theme: {
@@ -15,59 +15,71 @@
               mono: ['JetBrains Mono', 'monospace'],
             },
             colors: {
-              cosmic: {
-                950: '#090a0f', // Deepest background
-                900: '#0f131a', // Sidebar/Cards
-                800: '#1a1f2e', // Elements
-                700: '#262c40', // Borders
-                600: '#353e58',
-                100: '#e2e8f0', // Text
+              // Cyber-Industrial Palette
+              obsidian: {
+                950: '#050505', 
+                900: '#0a0a0b', 
+                800: '#18181b', 
+                700: '#27272a',
               },
-              accent: {
-                cyan: '#22d3ee',
-                purple: '#a78bfa',
-                emerald: '#34d399',
+              neon: {
+                cyan: '#06b6d4',     // Primary Action
+                purple: '#8b5cf6',   // Thinking/AI
+                emerald: '#10b981',  // Success/Code
+                amber: '#f59e0b',    // Warning/Metrics
+                rose: '#f43f5e',     // Error
               }
             },
-            backgroundImage: {
-              'gradient-radial': 'radial-gradient(var(--tw-gradient-stops))',
-              'glass': 'linear-gradient(180deg, rgba(26, 31, 46, 0.7) 0%, rgba(15, 19, 26, 0.7) 100%)',
+            animation: {
+              'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+              'scanline': 'scanline 8s linear infinite',
+              'fade-in-up': 'fadeInUp 0.5s ease-out forwards',
             },
-            boxShadow: {
-              'glow': '0 0 20px -5px rgba(56, 189, 248, 0.15)',
-              'glass': '0 8px 32px 0 rgba(0, 0, 0, 0.37)',
+            keyframes: {
+              scanline: {
+                '0%': { backgroundPosition: '0% 0%' },
+                '100%': { backgroundPosition: '0% 100%' },
+              },
+              fadeInUp: {
+                '0%': { opacity: '0', transform: 'translateY(10px)' },
+                '100%': { opacity: '1', transform: 'translateY(0)' },
+              }
             }
           }
         }
       }
     </script>
     <style>
-      /* Custom scrollbar for a developer-tool feel */
-      ::-webkit-scrollbar {
-        width: 6px;
-        height: 6px;
-      }
-      ::-webkit-scrollbar-track {
-        background: transparent;
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #262c40;
-        border-radius: 3px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #353e58;
-      }
+      ::-webkit-scrollbar { width: 6px; height: 6px; }
+      ::-webkit-scrollbar-track { background: transparent; }
+      ::-webkit-scrollbar-thumb { background: #27272a; border-radius: 3px; }
+      ::-webkit-scrollbar-thumb:hover { background: #3f3f46; }
+      
       body {
-        background-color: #090a0f;
-        color: #e2e8f0;
+        background-color: #050505;
+        color: #e4e4e7;
         antialiased;
       }
-      /* Utility for glass effects */
+
+      /* Subtle Grid Background */
+      .bg-grid {
+        background-size: 40px 40px;
+        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.03) 1px, transparent 1px),
+                          linear-gradient(to bottom, rgba(255, 255, 255, 0.03) 1px, transparent 1px);
+      }
+      
       .glass-panel {
-        background: rgba(15, 19, 26, 0.6);
+        background: rgba(24, 24, 27, 0.6);
+        backdrop-filter: blur(16px);
+        -webkit-backdrop-filter: blur(16px);
+        border: 1px solid rgba(255, 255, 255, 0.08);
+      }
+
+      .glass-input {
+        background: rgba(10, 10, 11, 0.8);
         backdrop-filter: blur(12px);
-        -webkit-backdrop-filter: blur(12px);
-        border: 1px solid rgba(255, 255, 255, 0.05);
+        border: 1px solid rgba(255, 255, 255, 0.08);
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
       }
     </style>
   <script type="importmap">
